# IEC-mod

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  install_hornet.sh  install_magerit.sh  install_stealth.sh
cmake/: FindCompileTimeDependencies.cmake  FindRunTimeDependencies.cmake
cmake/Modules/: FindOpenMP.cmake
demos/: CMakeLists.txt  configure_hornet.sh
demos/cg/: CMakeLists.txt  bcsstk14.rb  cg.c  mat100.txt  orig_cg.c  rose_cg_block.c.modified
demos/p3/: CMakeLists.txt  alloc.h  orig_p3.c  p3.c
demos/p3/triangles_22902/: boundarydata.out  celldata.out  celldata2.out  connect1.out  facedata2.out  facedata3.out  grid_data.out  nfcells.out  nodesdata.out  one.out
demos/p3/triangles_610/: boundarydata.out  celldata.out  celldata2.out  connect1.out  facedata.out  facedata2.out  facedata3.out  grid_data.out  nfcells.out  nodesdata.out  one.out
demos/quake/: CMakeLists.txt  orig_quake.c  pabloinp.in  pabloutp.in  perf.sh  quake.c  rose_quake_block.c.all_loops  rose_quake_block.c.modified  testinp.in
demos/quake/utils/: find_not_nan.sh  mesh-editor
demos/smvp/: CMakeLists.txt  orig_smvp.c  smvp.c
doxygen/: Doxyfile
src/: CMakeLists.txt
src/CompileTime/: CMakeLists.txt  access_details.cpp  analyseAST.cpp  array_details.cpp  aux.cpp  codegen.cpp  conditional.cpp  data_scalars.cpp  detector.cpp  driver.cpp  executor_gen.cpp  indarray_details.cpp  inspector_gen.cpp  loops.cpp  main.cpp  safe_scalars.cpp  unit_stride.cpp
src/CompileTime/ScopExtractor/: CMakeLists.txt  SageNodeAnnotation.cpp  SageTools.cpp  ScopExtractor.cpp  ScopExtractorVisitor.cpp  ScopParser.cpp
src/CompileTime/include/: CMakeLists.txt
src/CompileTime/include/CompileTime/: CMakeLists.txt  access_details.hpp  array_details.hpp  codegen.hpp  conditional.hpp  data_scalars.hpp  driver.hpp  indarray_details.hpp  loops.hpp  opts.hpp  safe_scalars.hpp
src/CompileTime/include/ScopExtractor/: CMakeLists.txt  SageNodeAnnotation.hpp  SageTools.hpp  ScopExtractor.hpp  ScopExtractorVisitor.hpp  ScopParser.hpp
src/RunTime/: CMakeLists.txt  Inspector.cpp  access_data.cpp  cdefs.cpp  communicator.cpp  external.cpp  global_data.cpp  global_loop.cpp  hypergraph.cpp  inspector.cpp  inspector_metis.cpp  local_comm.cpp  local_data.cpp  local_inspector.cpp
src/RunTime/DataStructures/: CMakeLists.txt  kshash.cpp  myset.cpp  qphash.cpp
src/RunTime/include/: CMakeLists.txt  ie.h
src/RunTime/include/DataStructures/: CMakeLists.txt  kshash.hpp  myset.hpp  qphash.hpp
src/RunTime/include/RunTime/: CMakeLists.txt  Inspector.hpp  access_data.hpp  communicator.hpp  external.hpp  global_data.hpp  global_loop.hpp  hypergraph.hpp  inspector.hpp  local_comm.hpp  local_data.hpp  local_inspector.hpp
